<resources>
    <string name="str_version">Version: 1.0.7</string>
    <string name="str_ads_app_id">ca-app-pub-5111194386517420~4649049392</string>
    <string name="str_ads_unit_id">ca-app-pub-5111194386517420/9079248995</string>
    <string name="app_name">BuludTech VPN</string>
    <string name="str_error">Error</string>
    <string name="str_action_bar_not_found">Your device doesn\'t support actionbar</string>
    <string name="str_ok">OK</string>
    <string name="str_action_bar_all_servers">Servers</string>
    <string name="str_action_bar_favorites">Favorites</string>
    <string name="str_empty" />
    <string name="str_retry">Retry</string>
    <string name="str_author_email">tupvct@gmail.com</string>
    <string name="str_yes">Yes</string>
    <string name="str_err_http_error">Can\'t get VPN list</string>
    <string name="str_err_parsing_error">Can\'t parse VPN list</string>
    <string name="str_err_no_server_found">No server found.</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_no">No</string>
    <string name="str_err_parsing_contact_us">Look like the program has problems with parsing data from VPNGate server. Please contact us to report the error!</string>
    <string name="str_err_title">Unexpected error</string>
    <string name="str_button_contact">Contact</string>
    <string name="str_mail_subject">Error report</string>
    <string name="str_mail_comment">"\nPlease tell us more about the problem: "</string>
    <string name="str_chooser_tittle">Send email…</string>
    <string name="str_activity_settings">Settings</string>
    <string name="str_spinner_title">Choose…</string>
    <string name="str_sort_radio_descending">Descending</string>
    <string name="str_sort_radio_ascending">Ascending</string>
    <string name="str_filter_button_text">Filter</string>
    <string name="str_reset_button_text">Reset</string>
    <string-array name="str_filter_array">
        <item>Country</item>
        <item>Host name</item>
        <item>Ip</item>
    </string-array>
    <string-array name="str_sort_array">
        <item>Default</item>
        <item>Speed</item>
        <item>Up time</item>
        <item>Total traffic</item>
        <item>Number of sessions</item>
        <item>Country</item>
        <item>Host name</item>
        <item>Ip</item>
    </string-array>
    <string-array name="str_array_frags">
        <item>KR</item>
        <item>CN</item>
        <item>TW</item>
        <item>US</item>
        <item>JP</item>
        <item>MY</item>
        <item>IR</item>
        <item>TH</item>
        <item>ID</item>
        <item>HK</item>
        <item>FR</item>
        <item>VN</item>
        <item>RU</item>
        <item>SG</item>
        <item>IN</item>
        <item>SA</item>
        <item>CA</item>
        <item>AF</item>
        <item>AL</item>
        <item>DZ</item>
        <item>AD</item>
        <item>AO</item>
        <item>AG</item>
        <item>AR</item>
        <item>AM</item>
        <item>AU</item>
        <item>AT</item>
        <item>AZ</item>
        <item>BS</item>
        <item>BH</item>
        <item>BD</item>
        <item>BB</item>
        <item>BY</item>
        <item>BE</item>
        <item>BZ</item>
        <item>BJ</item>
        <item>BT</item>
        <item>BO</item>
        <item>BA</item>
        <item>BW</item>
        <item>BR</item>
        <item>BN</item>
        <item>BG</item>
        <item>BF</item>
        <item>BI</item>
        <item>KH</item>
        <item>CM</item>
        <item>CV</item>
        <item>CF</item>
        <item>TD</item>
        <item>CL</item>
        <item>CO</item>
        <item>KM</item>
        <item>CG</item>
        <item>CK</item>
        <item>CR</item>
        <item>CI</item>
        <item>HR</item>
        <item>CU</item>
        <item>CY</item>
        <item>CZ</item>
        <item>KP</item>
        <item>DK</item>
        <item>CD</item>
        <item>DJ</item>
        <item>DM</item>
        <item>DO</item>
        <item>EC</item>
        <item>EG</item>
        <item>SV</item>
        <item>GQ</item>
        <item>ER</item>
        <item>EE</item>
        <item>ET</item>
        <item>FJ</item>
        <item>FI</item>
        <item>GA</item>
        <item>GM</item>
        <item>GE</item>
        <item>DE</item>
        <item>GH</item>
        <item>GR</item>
        <item>GD</item>
        <item>GT</item>
        <item>GN</item>
        <item>GW</item>
        <item>GY</item>
        <item>HT</item>
        <item>HN</item>
        <item>HU</item>
        <item>IS</item>
        <item>IQ</item>
        <item>IE</item>
        <item>IL</item>
        <item>IT</item>
        <item>JM</item>
        <item>JO</item>
        <item>KZ</item>
        <item>KE</item>
        <item>KI</item>
        <item>KW</item>
        <item>KG</item>
        <item>LA</item>
        <item>LV</item>
        <item>LB</item>
        <item>LS</item>
        <item>LR</item>
        <item>LY</item>
        <item>LT</item>
        <item>LU</item>
        <item>MG</item>
        <item>MV</item>
        <item>MT</item>
        <item>MH</item>
        <item>MW</item>
        <item>MR</item>
        <item>ML</item>
        <item>MU</item>
        <item>MX</item>
        <item>FM</item>
        <item>MC</item>
        <item>MN</item>
        <item>ME</item>
        <item>MA</item>
        <item>MZ</item>
        <item>MM</item>
        <item>NA</item>
        <item>NR</item>
        <item>NP</item>
        <item>NL</item>
        <item>NZ</item>
        <item>NI</item>
        <item>NE</item>
        <item>NG</item>
        <item>NU</item>
        <item>NO</item>
        <item>OM</item>
        <item>PK</item>
        <item>PW</item>
        <item>PA</item>
        <item>PG</item>
        <item>PY</item>
        <item>PE</item>
        <item>PH</item>
        <item>PL</item>
        <item>PT</item>
        <item>QA</item>
        <item>MD</item>
        <item>RO</item>
        <item>RW</item>
        <item>KN</item>
        <item>LC</item>
        <item>VC</item>
        <item>WS</item>
        <item>SM</item>
        <item>ST</item>
        <item>SN</item>
        <item>RS</item>
        <item>SC</item>
        <item>SL</item>
        <item>SK</item>
        <item>SI</item>
        <item>SB</item>
        <item>SO</item>
        <item>ZA</item>
        <item>SS</item>
        <item>ES</item>
        <item>LK</item>
        <item>SD</item>
        <item>SR</item>
        <item>SZ</item>
        <item>SE</item>
        <item>SY</item>
        <item>TJ</item>
        <item>MK</item>
        <item>TL</item>
        <item>TG</item>
        <item>TO</item>
        <item>TT</item>
        <item>TN</item>
        <item>TR</item>
        <item>TM</item>
        <item>TV</item>
        <item>UG</item>
        <item>UA</item>
        <item>AE</item>
        <item>GB</item>
        <item>TZ</item>
        <item>UY</item>
        <item>UZ</item>
        <item>VU</item>
        <item>VE</item>
        <item>YE</item>
        <item>ZM</item>
        <item>ZW</item>
    </string-array>
    <string name="str_btn_connect">Connect</string>
    <string name="str_btn_open_with">Open with</string>
    <string name="str_btn_save">Save</string>
    <string name="str_btn_delete">Remove</string>
    <string name="str_filter_input_hint">Enter filter string here…</string>
    <string name="str_ask_delete">Do you want to delete this VPN?</string>
    <string name="settings_general_open_third_party_sum">Enable if you want to use other app to open selected VPN</string>
    <string name="settings_general_open_third_party_title">Open VPN by third-party app</string>
    <string name="settings_general_save_filter_sum">Enable if you want to keep filter data for next launches</string>
    <string name="settings_general_save_filter_title">Retain filter data</string>
    <string name="settings_general_closing_confirm_dialog_sum">Enable if you want to have a confirmation when closing VPN</string>
    <string name="settings_general_closing_confirm_dialog_title">Show close confirmation</string>
    <string name="settings_general_show_change_name_dialog_sum">Enable if you want to have a dialog to change VPN name when adding it</string>
    <string name="settings_general_show_change_name_dialog_title">Show dialog to change name</string>
    <string name="settings_general_list_item_direction_title">List item sliding direction</string>
    <string name="settings_general_list_start_page_title">Start Page</string>
    <string name="settings_general_list_force_reload_time_title">Reload data if the app relaunches</string>
    <string name="settings_general">General</string>
    <string name="settings_connection">Connection</string>
    <string name="settings_boot">Start-up</string>
    <string name="use_system_proxy">Use system proxy</string>
    <string name="use_system_proxy_summary">Use the system wide configuration for HTTP/HTTPS proxies to connect.</string>
    <string name="net_change_summary">Turning this option on will force a reconnect if the network state is changed (e.g. WiFi to/from mobile)</string>
    <string name="net_change">Reconnect on network change</string>
    <string name="settings_cat_proxy">Proxy</string>
    <string name="settings_cat_vpn_connection">VPN Connection</string>
    <string name="settings_cat_general">Basic Behaviors</string>
    <string name="filter_app_spinner_hint">Choose connect type…</string>
    <string name="filter_app_connect_type">Connect Type</string>
    <string name="owner_fix_summary">Tries to set the owner of /dev/tun to system. Some CM9 images need this to make the VPNService API work. Requires root.</string>
    <string name="owner_fix">Fix ownership of /dev/tun</string>
    <string name="setting_loadtun_summary">Try to load the tun.ko kernel module before trying to connect. Needs rooted devices.</string>
    <string name="setting_loadtun">Load tun module</string>
    <string name="screenoff_summary">"Pause VPN when screen is off and less than 64 kB transferred data in 60s.</string>
    <string name="screenoff_title">Pause VPN connection after screen off</string>
    <string name="device_specific">Device specifics Hacks</string>
    <string name="vpn_filter_app_title">Connect to</string>
    <string name="vpn_allow_vpn_radio">Exclude BuludTech VPN (recommended)</string>
    <string name="str_about_title">About</string>
    <string name="str_author">Author</string>
    <string name="str_author_text">My name is Fariz. I\'ve graduated in 2011 and currently working in Germany/Munich. Thanks to Tu for share open source licensed source code.</string>
    <string name="str_ez_vpn_gate">BuludTech VPN</string>
    <string name="str_about_app">BuludTech VPN is very cheap application. We aim to everyone get and use it without any ads.</string>
    <string name="str_dev_info">Development Info</string>
    <string name="str_dev_info_details">BuludTech VPN is developed based on ICS-OpenVPN (schwabe), a full featured VPN App for Android. You can find further information at:</string>
    <string name="str_donation">Privacy</string>
    <string name="str_donation_details">BuludTechVPN application not save any information about destination address. We use public relay servers which is keep only Date and time,ID, IP address and hostname of destination VPN Server,Type of action (connect or disconnect),Raw IP address and hostname of the source VPN client computer,Type of VPN protocols (SSL-VPN, L2TP, OpenVPN or SSTP),VPN Client software-name, version and id (If available),Number of packets and bytes during a VPN connection, and debug information of communication errors\n\nNo other information will be transmitted to us nor be recorded on our logging server. </string>
    <string name="str_link">&#160; - BuludTech VPN\n&#160;&#160;&#160;    https://github.com/aze2201/BuludTechVPN\n&#160; - ICS-OpenVPN\n&#160;&#160;&#160;    https://github.com/schwabe/ics-openvpn</string>
</resources>