<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_cat_proxy">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="usesystemproxy"
            android:summary="@string/use_system_proxy_summary"
            android:title="@string/use_system_proxy"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="netchangereconnect"
            android:summary="@string/net_change_summary"
            android:title="@string/net_change"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_cat_vpn_connection" android:key="vpn_connection">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="ovpn3"
            android:summaryOn="Use the C++ OpenVPN library"
            android:summaryOff="Use OpenVPN 2.3"
            android:title="OpenVPN 3 Core"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="screenoff"
            android:summary="@string/screenoff_summary"
            android:title="@string/screenoff_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/device_specific" android:key="device_hacks">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="useCM9Fix"
            android:summary="@string/owner_fix_summary"
            android:title="@string/owner_fix"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="loadTunModule"
            android:summary="@string/setting_loadtun_summary"
            android:title="@string/setting_loadtun"/>
    </PreferenceCategory>
</PreferenceScreen>
