<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:colorBackground">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_ez_vpn_gate"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_version"
                android:textColor="@color/colorPrimaryDark"
                android:paddingBottom="4dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_about_app"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>
            <TextView
                android:paddingTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_author"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_author_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>
            <TextView
                android:paddingTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_dev_info"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_dev_info_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>
            <TextView
                android:autoLink="web"
                android:linksClickable="true"
                android:id="@+id/tv_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_link"/>
            <TextView
                android:paddingTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_donation"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_donation_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
