<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_fragments_left_right"
    android:paddingRight="@dimen/margin_fragments_left_right"
    android:paddingTop="@dimen/margin_fragments_top_bot"
    android:paddingBottom="@dimen/margin_fragments_top_bot">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/group_all"
        android:padding="@dimen/padding_list_view">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin_by_half"
            android:paddingTop="@dimen/activity_vertical_margin_by_half">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_app_connect_type"
                android:textColor="@color/colorAccent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">
                <TextView
                    android:id="@+id/enable_all_apps_text"
                    android:text="@string/vpn_filter_app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/filter_app_connect_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/filter_text_size"
                    android:prompt="@string/filter_app_spinner_hint"
                    android:entries="@array/filter_app_spinner_entries"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:id="@+id/exclude_this_app_text"
                    android:text="@string/vpn_allow_vpn_radio"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Switch
                    android:id="@+id/exclude_this_app_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>
        <android.support.v7.widget.RecyclerView
            android:id="@android:id/list"
            android:drawSelectorOnTop="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"/>
    </LinearLayout>

</LinearLayout>